Version ClaSS-1.0.10 release (2011/11/2)
-------------------------------------------

Included lates after registrer closes to the completion list and
changed number present to present in school.



Version ClaSS-1.0.9 release (2011/10/25)
-------------------------------------------

Used js to disable select options in generic print function.

Improved column display for student list when printing from InfoBook.

Removed the filter for em and en dashes in clean_text to avoid
corruption of Chinese chars.

Added form group as an optional explanation line on labels.

Date of first application added to the InfoBook list fields.

A description line added to printing assessment profile sheets.

Allow limiting students by a choice of subject classes in report
assessments and limit the assessments to a single subject.

The epfsync cron script now uploads cached profile photos to the
eportoflio icons directory for permanent storage.

The get_photo script now checks the cache then the eportfolio and last of
all ldap.

Fix: iconv applied to email message subject line.

Added an unlock button for published reports.

The Student array index RegistrationTutor now works for mulitple
form tutors.

Email notification of failures in the eportfolio_reports_publish
script.


Version ClaSS-1.0.8 release (2011/10/17)
-------------------------------------------

Option to BCC email messages to parents with student tutors.

Message explanation line included on the to sender's copy.

Display merit totals for a house on the report_merit page.

Added prefererred forename MarkBook export.

Exposed the otherpn1 and 2 fields in fetchStudent.

Allowed MarkBook export to work without a selected column.

Added a notification message sent out through the eportfolio for
shared comments.

Fix to searching by emailaddress (MATCH was too fuzzy).

Import students now tries to match existing guardians by name or
email address.

Re-wroked reporting incidents to display full table of details with
sorting.